--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
     "multer": "^1.4.5-lts.1",
-    "socket.io": "^4.7.1"
+  "@aws-sdk/client-s3": "^3.433.0",
+    "socket.io": "^4.7.1",
+    "sharp": "^0.32.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
